# lavender

./: .gitignore  conanfile.py  meson.build
python/: launch.py
python/core/: __init__.py
python/database/: __init__.py
scripts/: build.sh  init.py
scripts/meson_utils/: __init__.py  generate_subproject.py  meson.build.template
src/: meson.build
src/core/: core.h  logger.h  meson.build  plugin_store.h
src/core/impl/: core.cpp  logger.cpp  logger.hpp  plugin_store.cpp  plugin_store.hpp
src/core/python_binding/: module.cpp
src/db/: attribute.h  attribute_schema.h  db_module.h  graph.h  meson.build  node.h
src/db/impl/: db_module.cpp  graph.cpp  graph.hpp
src/db/python_binding/: module.cpp
src/foundation/: platform.h  types.h  uuid_operators.hpp
src/utils/: uuid_gen.h
